fix about z-index conflict regarding favorite button

--- a/client/src/style/today.css
+++ b/client/src/style/today.css
@@ -16,6 +16,10 @@
   height: 250px;
 }
 
+.circle-1 {
+  z-index: 1;
+}
+
 .circle1-stroke {
   top: 0;
   stroke-dasharray: calc(12rem * 2 * PI);
@@ -40,7 +44,6 @@
   align-items: center;
   color: white;
   position: absolute;
-  z-index: -1;
 }
 
 .state-temp {
@@ -69,7 +72,7 @@
   border: none;
   padding: 4px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 110;
 }
 
 .fav-icon {
